# hippo-voip

./: Cargo.toml
amus/: Cargo.toml  build.rs
amus/src/: alaw.rs  lib.rs  ulaw.rs
amus/src/g711/: alaw.rs  mod.rs
amuse/: Cargo.toml  LICENSE.md  README.md  build.rs
amuse/src/: alaw.rs  g191.rs  lib.rs  traits.rs  ulaw.rs
amuse/src/g191/: alaw.rs  ulaw.rs
amuse/src/g711/: ulaw.rs
amuse/src/impls/: alloc.rs  core.rs  mod.rs  std.rs
amuse/tests/: conformance.rs
dial-g711/: Cargo.toml
dial-pcm/: Cargo.toml  build.rs
dial-pcm/reference/: g711.h
dial-pcm/src/: lib.rs
dial-v90/: Cargo.toml
dial-v92/: Cargo.toml
hippo-voip/: Cargo.toml
hippo-voip/src/: lib.rs
ulaw/: Cargo.toml  build.rs
ulaw/src/: lib.rs  traits.rs  ulaw.rs
ulaw/src/g711/: ulaw.rs
ulaw/src/impls/: core.rs  mod.rs
