[workspace]
resolver = "2"
members = ["amuse", "hippo-voip"]

[workspace.package]
edition = "2021"
authors = ["Cass Fridkin <cass@swag.lgbt>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/caass/hippovoip"

[workspace.dependencies]
amuse = { path = "./amuse", version = "0.1.0" }

[workspace.lints.clippy]
# correctness = { level = "deny", priority = -1 }
# suspicious = { level = "warn", priority = -1 }
# complexity = { level = "warn", priority = -1 }
# perf = { level = "warn", priority = -1 }
# pedantic = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

# undocumented_unsafe_blocks = "warn"
# multiple_unsafe_ops_per_block = "warn"
# missing_safety_doc = "warn"

[workspace.lints.rust]
deprecated-safe = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "warn", priority = -1 }
