[package]
name = "amus"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[features]
default = ["std"]

std = ["alloc"]
alloc = []

g711 = ["bindgen", "cc"]

[dev-dependencies]
proptest = "1.0"

[build-dependencies]
bindgen = { version = "0.71", optional = true }
cc = { version = "1.2", optional = true }

[lints]
workspace = true
