[package]
name = "amus"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[features]
default = ["std", "g711"]

std = ["alloc"]
alloc = []

g711 = ["cc"]

[dev-dependencies]
proptest = "1.0"

[build-dependencies]
cc = { version = "1.2", optional = true }

[lints]
workspace = true
